compiler/tools/fpp-check/test/port_instance/undef_text_event.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/port_instance/undef_text_event.fpp: 3.3
  text event port eventOut
  ^
error: undefined symbol Fw
